feat(api): Implemented very basic meal plan generation algorithm